@@ -14,6 +14,7 @@ libscript_a_SOURCES =				\
 	script_callbacks.cpp			\
 	script_call_olist.cpp			\
 	script_call_unit.cpp			\
+	script_call_order.cpp			\
 	script_call_string.cpp			\
 	msgcenter.cpp				\
 	msgcenter.h
